# adapt-bio

./: README.md  pyproject.toml
adapt-bio/: .gitignore  README.md  adapt-bio-bert-tokenizer_exp.ipynb  adapt-bio-demo.ipynb  adapt-bio-dev-wikitext-103.ipynb  adapt-bio-dev.ipynb  adapt-bio-gap-filling.ipynb  adapt-bio-gpt2-tokenizer_exp.ipynb  final_adapt-bio.ipynb
results/: __huggingface_repos__.json  results.json  results_bert_tokenizer.json  results_gpt2_tokenizer.json
results/adapt-bio/: requirements.txt
results/adapt-bio/configs/: base_config.yaml
results/adapt-bio/experiments/configs/: adapt_bio_full.yaml  baseline.yaml
results/adapt-bio/scripts/: train.py
results/adapt-bio/src/adapt_bio/attention/: sparse_attention.py
results/adapt-bio/src/adapt_bio/core/: movement_pruning.py  rna_mask_refinement.py
results/adapt-bio/src/adapt_bio/evaluation/: tribe_validator.py
results/adapt-bio/src/adapt_bio/models/: adapt_bio_transformer.py
results/adapt-bio/src/adapt_bio/training/: trainer.py
results/adapt-bio/tests/: test_soma_mask.py
src/adapt_bio/attention/: sparse_attention.py
src/adapt_bio/core/: mhc_residual.py  movement_pruning.py  rna_mask_refinement.py  soma_mask.py  starling_topology.py
src/adapt_bio/evaluation/: sparsity_metrics.py
src/adapt_bio/training/: trainer.py
